Fix tagline spacing and padding on About page

--- a/css/about.css
+++ b/css/about.css
@@ -15,10 +15,13 @@
   font-family: 'Oswald', sans-serif;
   text-align: center;
   display: flex;
-  font-size: 1%;
+  font-size: 40px;
+  letter-spacing: 5px;
   color: white;
   line-height: 1.25;
-  margin-left: 1%;
+  margin-left: 30%;
+  padding: 15px;
+
 }
 
 /*________________________________________*/
