--- a/css/connect.css
+++ b/css/connect.css
@@ -2,7 +2,7 @@
 .contact {
   max-height: 800px;
   font-family: 'Oswald', sans-serif;
-  font-size: 26px;
+  font-size: 50px;
   background: url('../images/redwindow1.jpg') no-repeat center center fixed;
   background-size: cover;
   line-height: 2;
